[project]
name = "ip-domain-register"
version = "0.1.0"
description = "Self-updating register of owned external IP ranges and domains, with WHOIS/RDAP, DNS, subdomain enrichment and change detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
    "ipwhois>=1.2",
    "python-whois>=0.9.4",
    "requests>=2.31",
    "PyYAML>=6.0",
    "rich>=13.7",
    "click>=8.1",
]

[project.scripts]
ipreg = "ipreg.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
